<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="firstFragment"
            type="com.michaelrmossman.kotlin.rainbows.fragments.FirstFragment" />
        <variable
            name="introActivity"
            type="com.michaelrmossman.kotlin.rainbows.activities.IntroActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/intro_1_root_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="@dimen/fragment_horizontal_padding"
        android:paddingStart="@dimen/fragment_horizontal_padding"
        android:paddingTop="@dimen/fragment_vertical_padding"
        tools:context=".fragments.FirstFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/intro_1_image"
            android:layout_width="@dimen/intro_image_width_height"
            android:layout_height="@dimen/intro_image_width_height"
            android:contentDescription="@string/intro_1_content_description"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@id/intro_1_text_1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ImageContrastCheck"
            tools:src="@drawable/intro_1_image" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/intro_1_text_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/intro_text_margin"
            app:layout_constraintBottom_toBottomOf="@id/intro_1_image"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/intro_1_image"
            app:layout_constraintTop_toTopOf="@id/intro_1_image"
            tools:text="@string/intro_1_text_1"
            style="@style/Theme.Rainbows.GravityStart" />

        <ScrollView
            android:id="@+id/intro_1_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="@dimen/intro_scroll_view_margin"
            app:layout_constraintBottom_toTopOf="@id/intro_1_skip_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intro_1_image">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/intro_1_inner_constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/intro_1_text_2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/intro_text_margin"
                    android:drawablePadding="@dimen/intro_drawable_padding"
                    android:drawableStart="@drawable/baseline_security_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    style="@style/Theme.Rainbows.GravityStart"
                    tools:text="@string/intro_1_text_2" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/intro_1_text_3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/intro_text_margin"
                    android:drawablePadding="@dimen/intro_drawable_padding"
                    android:drawableStart="@drawable/baseline_phone_android_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/intro_1_text_2"
                    style="@style/Theme.Rainbows.GravityStart"
                    tools:text="@string/intro_1_text_3" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/intro_1_text_4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/intro_text_margin"
                    android:drawablePadding="@dimen/intro_drawable_padding"
                    android:drawableStart="@drawable/outline_fact_check_24"
                    android:text="@string/intro_1_text_4"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/intro_1_text_3"
                    style="@style/Theme.Rainbows.GravityStart"
                    tools:visibility="visible" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/intro_1_skip_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/intro_button_margin"
            android:onClick="@{ () -> introActivity.finishWithResult() }"
            android:text="@string/intro_skip_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="?attr/materialButtonOutlinedStyle" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/intro_1_next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/intro_button_margin"
            android:onClick="@{ () -> firstFragment.goNext() }"
            android:text="@string/intro_next_button"
            app:layout_constraintBottom_toBottomOf="@id/intro_1_skip_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/intro_1_skip_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
